--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_URI = mongodb://localhost:27017/authdb
-JWT_SECRET = mysecrectjwt
+MONGO_URI=mongodb://localhost:27017/jwtauthdb
+JWT_SECRET=mysecrectjwt
+PORT=3000
 
